[update]AI  alert dashboard; [update] logic supplier module, product module
