# app/Models/Expense.php
@@ -12,6 +12,7 @@ class Expense extends Model
 
     protected $fillable = [
         'title',
+        // 'category',
         'amount',
         'expense_date',
         'note',
